pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      #hostNetwork: true
      #dnsPolicy: "None"
      dnsConfig:
        nameservers:
          # upstream DNS used by pihole.
          - 1.1.1.1
      containers:
        - name: pihole
          # https://hub.docker.com/r/pihole/pihole/tags
          image: pihole/pihole
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: etc
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: "1"
      volumes:
        - name: etc
          hostPath:
            path: /data/pihole/etc
            type: Directory
        - name: dnsmasq
          hostPath:
            path: /data/pihole/dnsmasq.d
            type: Directory
