pihole-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.178.100
spec: 
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
    - port: 53
      name: dns-tcp
      targetPort: 53
      protocol: TCP
    - port: 53
      name: dns-udp
      targetPort: 53
      protocol: UDP
    - port: 67
      name: dhcp
      targetPort: 67
      protocol: UDP
    - port: 443
      name: https
      targetPort: 443
      protocol: TCP
